fixing layout issues on navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,14 +91,13 @@ nav {
 }
 
 #filter_button {
+  margin-right: 10px;
   border-radius: 2px; 
-  padding: 6px 6px 6px 6px;
+  padding: 6px 8px 6px 8px;
   border: 1px solid #e5e5e5;
 }
 
 #filter_button:hover {
-  border-radius: 2px; 
-  padding: 6px 6px 6px 6px;
   border: 1px solid #000;
   background-color: #04756F;
   color: #fff;
@@ -109,22 +108,25 @@ width: 200px;
 }
 
 form#pattern_search {
-  width: 20%;
+  border: 1px solid black;
+  width: 18%;
   display: inline-block;
 }
 
 #q_name_or_description_cont {
-  width: 60%;
+  width: 67%;
 }
 
 #logo {
   text-align: center;
-  width: 54%;
+  width: 70%;
   display: inline-block;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   font-style: italic;
   font-size: 180%;
+  margin-left: 10.5%;
+  margin-top: 3px;
 }
 
 #logo a {
@@ -134,13 +136,11 @@ form#pattern_search {
 #add_pattern {
   vertical-align: center;
   border-radius: 2px 0 0 2px; 
-  padding: 6px 4px 6px 8px;
+  padding: 6px 4px 6px 10px;
   border: 1px solid #e5e5e5;
 }
 
 #add_pattern:hover {
-  border-radius: 2px; 
-  padding: 6px 6px 6px 6px;
   border: 1px solid #000;
   background-color: #04756F;
 }
